--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  cursor: none;
 }
 
 li {
@@ -70,7 +69,7 @@ input {
 }
 
 button {
-  /* cursor: pointer; */
+  cursor: pointer;
 }
 
 ion-icon {
@@ -92,7 +91,6 @@ body {
   color: var(--black-coral);
   font-size: 1.5rem;
   line-height: 1.7;
-  cursor: none;
 }
 
 body.nav-active {
@@ -122,27 +120,9 @@ body.nav-active {
 }
 
 /* --CURSOR-- */
-.cursor-dot {
-  width: 5px;
-  height: 5px;
-  background-color: var(--white);
-}
-
-.cursor-outline {
-  width: 30px;
-  height: 30px;
-  border: 2px solid var(--dark-gray);
-}
-
 .cursor-dot,
 .cursor-outline {
-  position: fixed;
-  top: 0;
-  left: 0;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  z-index: 100;
-  pointer-events: none;
+  display: none;
 }
 
 /* --HEADER-- */
@@ -775,6 +755,11 @@ body.nav-active {
 }
 
 @media screen and (min-width: 1400px) {
+  /* GENERAL */
+  * {
+    cursor: none;
+  }
+
   /* --REUSED STYLES-- */
   .container {
     max-width: 1320px;
@@ -786,5 +771,30 @@ body.nav-active {
   }
   .interactive__title {
     font-size: 4rem;
+  }
+
+  /* --CURSOR-- */
+  .cursor-dot {
+    width: 5px;
+    height: 5px;
+    background-color: var(--white);
+  }
+
+  .cursor-outline {
+    width: 30px;
+    height: 30px;
+    border: 2px solid var(--dark-gray);
+  }
+
+  .cursor-dot,
+  .cursor-outline {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    z-index: 100;
+    pointer-events: none;
   }
 }
