--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,23 @@ body.nav-active {
   overflow: hidden;
 }
 
+/* --SCROLL BAR-- */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: hsl(0, 0%, 98%);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(0, 0%, 80%);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(0, 0%, 70%);
+}
+
 /* --REUSED STYLES-- */
 
 .container {
